[package]
name = "meta-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bson2 (required)
serde = { version = "1", features = ["derive"] }
bson2 = "2.0"
serde_repr = "0.1"

# logging lib(required)
log = "0.4"
fast_log = "1.3"

# rbatis (required) default is all-database+runtime-async-std-rustls
rbatis = { version = "3.0" }