[package]
name = "meta-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }

# bson2 (required)
serde = { version = "1", features = ["derive"] }
bson2 = "2.0"

# logging lib(required)
log = "0.4"
fast_log = "1.3"

thiserror = "1.0.20"

web3 = "0.17.0"