[package]
name = "meta-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
meta-database = { path = "../database", version = "=0.1.0" }
# bson2 (required)
serde = { version = "1", features = ["derive"] }
bson2 = "2.0"

# logging lib(required)
log = "0.4"
fast_log = "1.3"

# rbatis (required) default is all-database+runtime-async-std-rustls
rbatis = { version = "3.0" }

thiserror = "1.0.20"