[package]
name = "meta-warpws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }

serde={version="1.0.126",features=["derive"]}
warp = "0.3.1"
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.4", features = ["serde", "v4"] }
tokio-stream = "0.1.6"
