[package]
name = "meta-wshandler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
# logging lib(required)
log = "0.4"
fast_log = "1.3"

thiserror = "1.0.20"
websocket = "0.26.0"