[package]
name = "meta-wshandler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
fast_log = "1.3"
thiserror = "1.0"
websocket = "0.27.0"
crossbeam-channel = "0.5"
backtrace = "0.3"
tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
url = "2.2.2"
uuid = { version = "1", features = ["serde", "v4"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
