[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
atoi = "2.0.0"
clap = { version = "4.4", features = ["derive"] }
tokio-stream = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
dotenv = "0.15.0"
thiserror = "1"
async-stream = "0.3.0"
log = "0.4"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"

[[bin]]
name = "my-redis-cli"
path = "src/bin/client.rs"

[[bin]]
name = "my-redis-server"
path = "src/bin/server.rs"
