[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
async-trait = "0.1.72"
bitcoin = { version = "0.31.0", features = ["rand"] }
base64 = "0.21.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
serde_yaml = "0.9.17"
tokio-stream = "0.1.9"
tokio-util = { version = "0.7.3", features = ["compat"] }
hyper = { version = "0.14.24", features = ["http1", "client"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bitcoincore-rpc = "0.18.0"
bincode = "1.3.3"
thiserror = "1.0.40"
log = "0.4.14"
